# commit_message_generation

./: .gitignore  Config.py  LICENSE  README.md  compute_metrics.py  compute_metrics_by_lang.sh  config.yaml  environment.yml  eval.py  eval_openai.py  faiss_knn.py  full_run.py  lr_logger_callback.py  metrics.py  mypy.ini  plot_scatter.py  pyproject.toml  requirements.txt  retrieve.py  run_on_dataset.py  setup.py  train.py
appendix/: README.md  dataset_percentiles.md
conf/: __init__.py  config.yaml  eval_config.py  eval_config.yaml  metrics_config.py  metrics_config.yaml  openai_config.py  retrieval_config.py  sweep.yaml  train_config.py  train_config.yaml
configs/: config.yaml  dataset_config.yaml  test_config.yaml
dataset_utils/: CMGDataModule.py  CommitMessageGenerationDataset.py  GitDiffOutputProcessor.py  cmg_data_module.py  cmg_dataset.py  cmg_dataset_w_history.py  data_collator.py  data_collator_corrupt_messages.py  data_collator_w_history.py  data_collators.py  data_preprocessor.py  diff_preprocessor.py  edit_distance_utils.py  project_ids_preprocessor.py  random_sampler_by_author.py  sampler_by_author.py  torchtext_dataset.py  utils.py
docs/: README.md  index.html
experiments/: AccuracyCalculation.py  BleuCalculation.py
metrics/: MyAccuracyMetric.py  MyBleuMetric.py
model/: Decoder.py  EncoderDecoderModule.py  decoder.py  encoder_decoder_module.py  gpt2_lm_head_module.py  gpt2lmhead_module.py  my_roberta_model.py  roberta_for_mlm_module.py
models/: BahdanauAttention.py  BeamSearch.py  Decoder.py  EncoderDecoder.py  Generator.py  SimpleLossCompute.py  test_utils.py  train.py  train_utils.py
notebooks/: cleaned_dataset_analysis.ipynb
onnx_utils/: config.yaml  onnx_converter.py
pretrained_models/: convert_to_onnx.py
scripts/: eval.py  train.py
src/: __init__.py  convert.py  generate.py  utils.py
tests/: BleuCalculationTest.py  test_accuracy.py  test_api.py  test_bow_embedder.py  test_chrf.py  test_codereviewer_preprocessor.py  test_data_collator.py  test_data_collator_base.py  test_data_collator_test.py  test_data_collator_train.py  test_data_processor.py  test_default_preprocessor.py  test_diff.py  test_diff_search.py  test_edit_similarity.py  test_exact_match.py  test_full_pipeline.sh  test_gen_collator.py  test_generate.py  test_gpt2_decoder.py  test_metrics.py  test_mrr.py  test_onnx_utils.py  test_pipeline.py  (+6 more)
(+196 files in other folders)
